--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+li {
+  list-style: none;
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
+/* ADD SEMANTIC UI */
